# jump-platform

./: .gitignore  CLAUDE.md  README.md  RELEASE.md
.claude/: README.md
.github/workflows/: build-release-nuitka.yml  build-worker-binaries.yml  deploy-backend.yml
jump_admin_tui/: README.md  pyproject.toml
jump_admin_tui/jump_admin_tui/: api.py  app.py  config.py
jump_backend/: .dev.vars.example  README.md  package-lock.json  package.json  wrangler.toml
jump_backend/migrations/: 0001_init.sql  0002_store_license_key.sql  0003_releases.sql  0004_session_metadata.sql
jump_backend/scripts/: bootstrap.sh  prod_smoke.py  sync_domains_from_json.py
jump_backend/src/: crypto.ts  http.ts  index.ts
jump_site_modules/: __init__.py  base.py  exceptions.py  gnuboard_base.py  types.py
jump_site_modules/custom/: __init__.py
jump_site_modules/gnuboard/: __init__.py  (+1 more)
jump_worker_dashboard/: README.md  __init__.py  __main__.py  main.py  pyproject.toml
jump_worker_dashboard/app/: _guard.py  backend_client.py  browser.py  captcha_solver.py  db.py  engine.py  exceptions.py  file_manager.py  gui.py  gui_legacy.py  handlers.py  log_bus.py  models.py  platform_domains.py  sites.py  updater.py
jump_worker_dashboard/app/site_handlers/: browser_handlers.py  http_handlers.py
jump_worker_dashboard/assets/: calendar.icns
jump_worker_dashboard/data/: .logindata.json  platform_domains.json
jump_worker_dashboard/installer/: guardian-setup.iss
jump_worker_dashboard/scripts/: backend_smoke.py  build_macos.sh  build_windows.ps1  obfuscate_strings.py  test_update_flow.py
(+52 files in other folders)
